--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/lodash": "^4.17.16",
         "@types/node": "^22.13.5",
         "@vue/eslint-config-typescript": "^14.3.0",
         "eslint": "^9.17.0",
@@ -35,6 +36,8 @@
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
         "laravel-vite-plugin": "^1.0",
+        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "lucide-react": "^0.509.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.1",
