--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@internationalized/date": "^3.8.0",
         "@tailwindcss/vite": "^4.1.1",
         "@tanstack/vue-table": "^8.21.3",
+        "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
@@ -44,9 +45,11 @@
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "typescript": "^5.2.2",
+        "vee-validate": "^4.15.0",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
-        "ziggy-js": "^2.4.2"
+        "ziggy-js": "^2.4.2",
+        "zod": "^3.25.1"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
