--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "vee-validate": "^4.15.0",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-sonner": "^2.0.0",
         "ziggy-js": "^2.4.2",
         "zod": "^3.25.1"
     },
