--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@iconify/vue": "^5.0.0",
         "@inertiajs/vue3": "^2.0.0",
         "@internationalized/date": "^3.8.0",
         "@tailwindcss/vite": "^4.1.1",
@@ -41,13 +42,14 @@
         "lodash-es": "^4.17.21",
         "lucide-react": "^0.509.0",
         "lucide-vue-next": "^0.468.0",
-        "reka-ui": "^2.2.1",
+        "reka-ui": "^2.3.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "typescript": "^5.2.2",
         "vee-validate": "^4.15.0",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-multiselect": "^3.2.0",
         "vue-sonner": "^2.0.0",
         "ziggy-js": "^2.4.2",
         "zod": "^3.25.1"
