--- a/docker/xdebug.ini
+++ b/docker/xdebug.ini
@@ -2,7 +2,7 @@ zend_extension = xdebug.so
 
 [xdebug]
 xdebug.mode = develop,debug
-xdebug.start_with_request = yes
+xdebug.start_with_request = trigger
 xdebug.client_host = host.docker.internal
 xdebug.client_port = 9003
 xdebug.log = /var/www/storage/logs/xdebug.log
