--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.33",
         "laravel/tinker": "^2.10.1",
+        "predis/predis": "^3.1",
         "spatie/laravel-permission": "^6.19",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.3",
@@ -29,6 +31,9 @@
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
