--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
     app:
         build:
@@ -13,6 +11,9 @@ services:
             - ./:/var/www
         networks:
             - laravel
+        depends_on:
+            - redis
+            - db
 
     web:
         image: nginx:alpine
@@ -41,6 +42,15 @@ services:
             - "3307:3306"
         volumes:
             - dbdata:/var/lib/mysql
+        networks:
+            - laravel
+
+    redis:
+        image: redis:alpine
+        container_name: laravel-redis
+        restart: unless-stopped
+        ports:
+            - "6379:6379"
         networks:
             - laravel
 
