--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/cashier-paddle": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^3.1",
         "spatie/laravel-permission": "^6.19",
